<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Calculator_Screen"
        android:layout_width="412dp"
        android:layout_height="190dp"
        android:background="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/Button_Layout"
        app:layout_constraintEnd_toEndOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintTop_toTopOf="@+id/main"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/Equation"
            android:layout_width="412dp"
            android:layout_height="95dp"
            android:text="Hello"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Calculator_Screen" />

        <TextView
            android:id="@+id/Input"
            android:layout_width="412dp"
            android:layout_height="95dp"
            android:text="Hello"
            android:textAlignment="viewEnd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Equation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Button_Layout"
        android:layout_width="412dp"
        android:layout_height="542dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/main"
        app:layout_constraintEnd_toEndOf="@+id/main"
        app:layout_constraintStart_toStartOf="@+id/main"
        app:layout_constraintTop_toBottomOf="@+id/Calculator_Screen"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="190dp">

        <androidx.gridlayout.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            tools:layout_editor_absoluteX="-46dp"
            tools:layout_editor_absoluteY="0dp">

            <Button
                android:id="@+id/num_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num7"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="0"
                app:layout_row="1"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num4"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="0"
                app:layout_row="2"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num1"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="0"
                app:layout_row="3"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num8"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="1"
                app:layout_row="1"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num5"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="1"
                app:layout_row="2"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num2"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="1"
                app:layout_row="3"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num9"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="2"
                app:layout_row="1"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num6"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="2"
                app:layout_row="2"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/num_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num3"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="2"
                app:layout_row="3"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/Addition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/Addition"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="0"
                app:layout_row="0"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/Subtraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/Subtraction"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="1"
                app:layout_row="0"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/Multiplication"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/Multiplication"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="2"
                app:layout_row="0"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/Division"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/Division"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="3"
                app:layout_row="0"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/Num_0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/num0"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="1"
                app:layout_row="4"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />

            <Button
                android:id="@+id/equals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="@color/Button_Color"
                android:text="@string/Calculate"
                android:textColor="@color/Button_TextColor"
                app:iconTint="@color/Button_TextColor"
                app:layout_column="3"
                app:layout_row="1"
                app:rippleColor="@color/Button_TextColor"
                app:strokeColor="@color/Button_TextColor" />
        </androidx.gridlayout.widget.GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>